# Task-TEB-Team

./: .env.example  README.md  pyproject.toml
app/: manage.py
app/app/: asgi.py  urls.py  wsgi.py
app/app/settings/: local.py  production.py  settings.py
app/bot/: __init__.py  bot.py
app/data/: __init__.py  database.py
app/main/: admin.py  service.py  urls.py
app/main/forms/: __init__.py  login.py
app/main/models/: __init__.py  user.py
app/main/static/main/: login.css  main.css
app/main/templates/main/: login.html  main.html
app/main/views/: __init__.py  login.py  logout.py  main.py
app/server/: __init__.py  server.py
app/static/css/: style.css
