[tool.poetry]
name = "TEB-team"
version = "0.1.0"
description = ""
authors = ["sazzeck <sazzeckprog@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.21"
Django = "^4.1"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
uvicorn = "^0.18.2"
pyairtable = "^1.2.0"
airtable-python-wrapper = "^0.15.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
